my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EAFTERMSGCOMP/EAFTERMSGCOMP.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERMSGCOMP.dml:13:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERMSGCOMP.dml:18:10: error EAFTERMSGCOMPPARAM: 'b' is a message component parameter, and can only be used as a direct argument to the callback method of the after statement
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EAFTERMSGCOMP.dml:21:9: error EAFTERMSGCOMPPARAM: 'i' is a message component parameter, and can only be used as a direct argument to the callback method of the after statement
